Fixes to dropzone toggles visibility and image properly now
git-svn-id: http://svn.cmsmadesimple.org/svn/cmsmadesimple@9687 3d254a34-79dc-0310-9e5f-be208747d8a0

--- a/trunk/admin/themes/OneEleven/css/style.css
+++ b/trunk/admin/themes/OneEleven/css/style.css
@@ -1874,7 +1874,7 @@ ul.sortable .placeholder {
 	top:0
 }
 
-.drop a.toggle-dropzone {
+.drop-inner + a.toggle-dropzone {
 	background: transparent url(themes/OneEleven/images/layout/toggle-dropzone.png) no-repeat -15px 0;
 	border: 1px solid #ccc;
 	border-top: none;
@@ -1889,7 +1889,7 @@ a.toggle-dropzone:active,
 a.toggle-dropzone:focus {
 	outline: none
 }
-.drop.hidden a.toggle-dropzone {
+.drop-inner.hidden + a.toggle-dropzone {
 	background: transparent url(themes/OneEleven/images/layout/toggle-dropzone.png) no-repeat 0 0;
 }
 .drop .drop-inner {
